# berry

./: .gitmodules  CMakeLists.txt  README.md
berry/: Bernstein.h  BernsteinBasis.h  BernsteinTransform.h  Logging.h  MultiIndex.h  Operations.h  Options.h  Polynomial.h  Shrink.h  Types.h
berry/impl/: BernsteinBasis_impl.hpp  BernsteinTransform_impl.hpp  MultiIndex_impl.hpp  Operations_impl.hpp  Polynomial_impl.hpp  Shrink_impl.hpp  Types_impl.hpp
src/: CMakeLists.txt  beep.cpp
